fix: dark mode icon problem

--- a/assets/scss/custom/structure/_topbar.scss
+++ b/assets/scss/custom/structure/_topbar.scss
@@ -430,7 +430,7 @@
 }
 
 .nav-sticky {
-  background-color: $body-bg;
+  background-color: $white;
 }
 
 @media (prefers-color-scheme: dark) {
